--- a/event.3
+++ b/event.3
@@ -310,6 +310,10 @@ The
 API manpage is based on the
 .Xr timeout 9
 manpage by Artur Grabowski.
+The port of
+.Nm libevent
+to Windows is due to Michael A. Davis.
+Support for real-time signals is due to Taral.
 .Sh AUTHORS
 The
 .Nm event
