acknowledgements and new version
git-svn-id: http://levent.svn.sourceforge.net/svnroot/levent/trunk/libevent@143 ce677c24-8c1a-0410-9497-a30ef3a96221

--- a/README
+++ b/README
@@ -11,3 +11,16 @@ You can run the regression tests by
 $ make verify
 
 Before, reporting any problems, please run the regression tests.
+
+Acknowledgements:
+-----------------
+
+The following people have helped with suggestions, ideas or code:
+
+  Nick Mathewson
+  Andrew Danforth
+  Shie Erlich
+  Mike Davis
+
+If I have forgotten your name, please contact me.
+
