--- a/event.3
+++ b/event.3
@@ -324,7 +324,7 @@ the call will have no effect.
 .Pp
 The function
 .Fn event_once
-is similiar to
+is similar to
 .Fn event_set .
 However, it schedules a callback to be called exactly once and does not
 require the caller to prepare an
@@ -507,7 +507,7 @@ The
 library was written by Niels Provos.
 .Pp
 .Sh BUGS
-This documentation is neither complete nor authorative.
+This documentation is neither complete nor authoritative.
 If you are in doubt about the usage of this API then
 check the source code to find out how it works, write
 up the missing piece of documentation and send it to
