--- a/README
+++ b/README
@@ -15,12 +15,14 @@ Before, reporting any problems, please run the regression tests.
 Acknowledgements:
 -----------------
 
-The following people have helped with suggestions, ideas or code:
+The following people have helped with suggestions, ideas, code or
+fixing bugs:
 
   Nick Mathewson
   Andrew Danforth
   Shie Erlich
   Mike Davis
+  William Ahern
+  Alexander von Gernler
 
 If I have forgotten your name, please contact me.
-
