--- a/README
+++ b/README
@@ -12,6 +12,10 @@ $ make verify
 
 Before, reporting any problems, please run the regression tests.
 
+To enable the low-level tracing build the library as:
+
+CFLAGS=-DUSE_DEBUG ./configure [...]
+ 
 Acknowledgements:
 -----------------
 
@@ -25,5 +29,7 @@ fixing bugs:
   William Ahern
   Alexander von Gernler
   Artur Grabowski
+  Stas Bekman
+  Tassilo von Parseval
 
 If I have forgotten your name, please contact me.
