document that read and write callbacks may be NULL.
git-svn-id: http://levent.svn.sourceforge.net/svnroot/levent/trunk/libevent@228 ce677c24-8c1a-0410-9497-a30ef3a96221

--- a/event.3
+++ b/event.3
@@ -493,6 +493,8 @@ The argument is specified by the fourth parameter
 A
 .Fa bufferevent struct
 pointer is returned on success, NULL on error.
+Both the read and the write callback may be NULL.
+The error callback has to be always provided.
 .Pp
 Once initialized, the bufferevent structure can be used repeatedly with
 bufferevent_enable() and bufferevent_disable().  The flags parameter can
